--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,13 @@
 {
   "31337": {
-    "token": {
+    "dapp": {
       "address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+    },
+    "usd": {
+      "address": "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+    },
+    "amm": {
+      "address": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"
     }
   }
 }
