--- a/src/config.json
+++ b/src/config.json
@@ -9,5 +9,16 @@
     "amm": {
       "address": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
     }
+  },
+  "11155111": {
+    "dapp": {
+      "address": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+    },
+    "usd": {
+      "address": "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+    },
+    "amm": {
+      "address": "0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0"
+    }
   }
 }
